# clinamen2-public-releases

./: .gitignore  AUTHORS  MANIFEST.in  NOTICE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
_modules/: index.html
_modules/clinamen2/: test_functions.html
_sources/: index.rst.txt
_sources/source/: calculator_guide.rst.txt  clinamen2.cmaes.rst.txt  clinamen2.runner.rst.txt  example_tutorials.rst.txt
_static/: documentation_options.js
clinamen2/: __init__.py  test_functions.py
clinamen2/cmaes/: cmaes_criteria.py  params_and_state.py  termination_criterion.py
clinamen2/runner/: __init__.py  basic_runner.py
clinamen2/utils/: bipop_restart.py  file_handling.py  jax_data.py  lennard_jones.py  neuralil_evaluation.py  plot_functions.py  script_functions.py  structure_setup.py
datasets/function_trial/: cigar128.data  cigar16.data  cigar256.data  cigar32.data  cigar4.data  cigar64.data  cigar8.data  diffpowers128.data  diffpowers16.data  diffpowers256.data  diffpowers32.data  diffpowers4.data  diffpowers64.data  (+29 more)
docs/: README.md  conf.py
examples/: calculator_tutorial.ipynb  evolve_ag_cluster_dft.py  evolve_ag_cluster_nwchem.py  evolve_lj_cluster_jax.py  evolve_lj_cluster_jax_bipop.py  evolve_si_bulk_nnff.py  evolve_test_function.py  evolve_test_function_bipop.py  example_function_trial.ipynb  optimize_si_fire_nnff.py  plot_example.py  run_function_trial.sh  scheduler_start_nwchem.sh  scheduler_start_vasp.sh  worker_start_nwchem.sh  worker_start_vasp.sh
source/: calculator_guide.html  clinamen2.cmaes.html  clinamen2.html  clinamen2.runner.html  clinamen2.utils.html  example_tutorials.html  getting_started.html  modules.html
tests/: aux_functions.py  aux_functions_jax.py  conftest.py  pytest.ini  test_algorithmparameters.py  test_algorithmstate.py  test_basicrunner.py  test_cholesky_on_functions.py  test_cmaes_criteria.py  test_termination_criterion.py  test_utils.py
(+52 files in other folders)
