# -*- coding: utf-8 -*-
# Clinamen2, a versatile implementation of the Cholesky CMA-ES.
# Copyright (C) 2023 The Clinamen2 contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name="Clinamen2"
authors = [
    {name = "Ralf Wanzenböck", email = "ralf.wanzenboeck@tuwien.ac.at"}
]
description="a versatile implementation of the Cholesky CMA-ES"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "ase>=3.22",
    "numpy>=1.20",
    "scipy>=1.8",
    "dask>=2022.9.0",
    "distributed>=2022.9.0",
    "jinja2>=3.1.2",
    "dill>=0.3.5.1",
    "tqdm>=4.63.0",
    "packaging>=23.1"
]
dynamic = ["version"]
readme = "README.md"

[project.optional-dependencies]
test = ["pytest", "pytest-datadir"]
doc = ["sphinx", "sphinx-autodoc-typehints", "sphinx-rtd-theme"]

[tool.setuptools]
packages = ["clinamen2"]


[tool.setuptools.dynamic]
version = {attr = "clinamen2.__version__"}
